fix/mantis-25-5 : alignement form search

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7117,6 +7117,9 @@ body {
   padding-bottom: 10px;
   margin-bottom: 10px;
 }
+#admin-page-devis .bloc-recherche #devis-search-Form .ref_bloc .col-auto {
+  width: 20%;
+}
 #admin-page-devis .bloc-recherche #devis-search-Form .bloc_date_form .date_bloc {
   display: flex;
   flex-direction: row;
